src/test/deca/context/invalid/testIdentifierIsType.deca
// Description : Le nom d'un identificateur est un type prédifini
{
    int float = 2;
}
